bad/assign_field_int_arr_elem_array.example_compiler_output
ERROR
[1mbad/assign_field_int_arr_elem_array.lat:7:20: [1;31merror: [0;1massigning to `int` from incompatible type `int[]`[m
	(new C[1])[2].fld = new int[3];
	                  [1;32m^[m
